fix: try more lines when trying to identify gc log format (#220)